WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260791
Fine-grained invalidation for :host pseudo-class in non-subject position
https://bugs.webkit.org/show_bug.cgi?id=260791
Summary
Fine-grained invalidation for :host pseudo-class in non-subject position
Antti Koivisto
Reported
2023-08-28 06:05:47 PDT
:host foo
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-28 06:06:27 PDT
<
rdar://problem/114560066
>
Antti Koivisto
Comment 2
2023-08-28 06:27:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17123
EWS
Comment 3
2023-08-28 10:11:23 PDT
Committed
267355@main
(321396c31ca5): <
https://commits.webkit.org/267355@main
> Reviewed commits have been landed. Closing PR #17123 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug