Source/WebCore/style/AttributeChangeInvalidation.cpp
@@ -68,26 +68,34 @@ void AttributeChangeInvalidation::invalidateStyle(const QualifiedName& attribute
     if (shouldInvalidateCurrent)
         m_element.invalidateStyle();
 
-    auto& ruleSets = m_element.styleResolver().ruleSets();
+    auto collect = [&](auto& ruleSets, std::optional<MatchElement> onlyMatchElement = { }) {
+        auto* invalidationRuleSets = ruleSets.attributeInvalidationRuleSets(attributeNameForLookups);
+        if (!invalidationRuleSets)
+            return;
 
-    auto* invalidationRuleSets = ruleSets.attributeInvalidationRuleSets(attributeNameForLookups);
-    if (!invalidationRuleSets)
-        return;
-
-    for (auto& invalidationRuleSet : *invalidationRuleSets) {
-        for (auto* selector : invalidationRuleSet.invalidationSelectors) {
-            if (!selector->isAttributeSelector()) {
-                ASSERT_NOT_REACHED();
+        for (auto& invalidationRuleSet : *invalidationRuleSets) {
+            if (onlyMatchElement && invalidationRuleSet.matchElement != onlyMatchElement)
                 continue;
-            }
-            bool oldMatches = !oldValue.isNull() && SelectorChecker::attributeSelectorMatches(m_element, attributeName, oldValue, *selector);
-            bool newMatches = !newValue.isNull() && SelectorChecker::attributeSelectorMatches(m_element, attributeName, newValue, *selector);
-            if (oldMatches != newMatches) {
-                Invalidator::addToMatchElementRuleSets(m_matchElementRuleSets, invalidationRuleSet);
-                break;
+
+            for (auto* selector : invalidationRuleSet.invalidationSelectors) {
+                if (!selector->isAttributeSelector()) {
+                    ASSERT_NOT_REACHED();
+                    continue;
+                }
+                bool oldMatches = !oldValue.isNull() && SelectorChecker::attributeSelectorMatches(m_element, attributeName, oldValue, *selector);
+                bool newMatches = !newValue.isNull() && SelectorChecker::attributeSelectorMatches(m_element, attributeName, newValue, *selector);
+                if (oldMatches != newMatches) {
+                    Invalidator::addToMatchElementRuleSets(m_matchElementRuleSets, invalidationRuleSet);
+                    break;
+                }
             }
         }
-    }
+    };
+
+    collect(m_element.styleResolver().ruleSets());
+
+    if (auto* shadowRoot = m_element.shadowRoot())
+        collect(shadowRoot->styleScope().resolver().ruleSets(), MatchElement::Host);
 }
 
 void AttributeChangeInvalidation::invalidateStyleWithRuleSets()
